Update the Share Extension View

This CL updates the ShareExtensionView, allowing the URL to be displayed on 3
lines and changes the animation of the screenshot view to have it expanding
from the right instead of sliding in from the left.

BUG=680912

Review-Url: https://codereview.chromium.org/2629853003
Cr-Commit-Position: refs/heads/master@{#443540}

Former-commit-id: 71db1d97d86d4bfa89edb4d8b7bbebdecf701b47